# MLInference

./: .gitignore  CMakeLists.txt  README.md
cmake/: BuildSetup.cmake  DeployBackends.cmake  FindEigen.cmake  FindLWTNN.cmake  FindXGBoost.cmake  Finddmlc.cmake  Findrabit.cmake
config/: setup.in
include/MLInference/: LWTNNConfig.h  LWTNNKernel.h  MLKernel.h  MLManager.h  Types.h  Utilities.h  XGBoostKernel.h
scripts/: keras2lwtnn
src/: LWTNNConfig.cxx  LWTNNKernel.cxx  MLManager.cxx  XGBoostKernel.cxx
test/: CMakeLists.txt  runCore.cxx  test_features.json
